--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -1,4 +1,6 @@
 *{
+    margin: 0;
+    padding: 0;
     list-style: none;
 }
 
@@ -8,12 +10,126 @@ body,html{
     background-color: #F0F3F7;
 }
 
+.main{
+    height: 100%;
+    box-sizing: border-box;
+}
+
 .header{
     width: 100%;
     height: 50px;
     color: black;
     font-size: 25px;
     line-height: 50px;
+    text-align: center;
+    border-bottom: 1px solid #999999;
+    background-color: #fff;
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.mainContent{
+    padding-top: 50px;
+    height: 100%;
+    display: flex;
+}
+
+.mainContent .navList{
+    height: 100%;
+    flex: 1;
+    background-color: #000C17;
+    text-align: center;
+    margin: 0!important;
+    padding: 0;
+}
+
+.mainContent .navList li{
+    height: 40px;
+    line-height: 40px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.mainContent .navList .active{
+    background-color: #1890FF;
+}
+
+.mainContent .navList li a{
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.mainContent .content{
+    flex: 5;
+    height: 100%;
+    margin: 0;
+    padding: 15px 30px;
+    display: flex;
+}
+
+.mainContent .content .input-form{
+    flex: 1;
+    background-color: white;
+    border-radius: 2px;
+    padding: 30px;
+    margin: 0 30px;
+}
+
+.index-content-form{
+    height: 220px;
+}
+
+.recharge-content-form{
+    height: 280px;
+}
+
+.btn-primary{
+    background-color: #1890FF!important;
+}
+
+.input-form .form-group{
+    display: flex;
+}
+
+.input-form .form-group label{
+    width: 75px;
+    line-height: 30px;
+    font-size: 14px;
+}
+
+.input-form .form-group select{
+    flex: 4;
+    line-height: 30px;
+    font-size: 14px;
+    background-color:#ffffff;
+}
+
+.input-form .form-group input{
+    flex: 3;
+    font-size: 14px;
+    line-height: 30px;
+    height: 30px;
+}
+
+.input-form .form-group button{
+    flex: 1;
+}
+
+.input-form .form-group .unit-btn{
+    background-color: white;
+    border: none;
+    outline: none;
+    height: 30px;
+    line-height: 30px;
+    font-size: 14px;
+}
+
+.vCode-btn{
+    border: 1px solid #D9D9D9;
+    border-radius: 2px;
+    color: #1890FF;
+    margin-left: 20px;
 }
 
 #loginForm .form-horizontal{
@@ -21,7 +137,161 @@ body,html{
     margin: 20% auto;
 }
 
-#loginForm .btn-primary{
-    margin-top: 50px;
+.blue-btn{
+    background-color: #1890FF;
+    color: white;
     width: 100%;
+    margin-top: 50px;
+}
+
+.account-block {
+    display: flex;
+    flex-direction: column;
+}
+
+.account-block .account-content{
+    background-color: white;
+    padding: 50px 40px;
+    margin-bottom: 45px;
+}
+
+.account-block .account-content p{
+    font-size: 34px;
+}
+
+.account-block .account-content p span{
+    margin-right: 15px;
+}
+
+.column-content{
+    flex-direction: column;
+}
+
+.nav_bar{
+    display: flex;
+    margin-top: 20px;
+}
+
+.nav_bar button{
+    flex: 1;
+    width: 100px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 14px;
+    border-radius: 4px;
+}
+
+.grid{
+    width: 100%;
+    background-color: white;
+    border-radius: 4px;
+}
+
+.grid thead{
+    height: 54px;
+    line-height: 54px;
+    text-align: center;
+    background-color: rgba(250,250,250,1);
+    font-size: 14px;
+}
+
+.grid tbody{
+    line-height: 54px;
+    text-align: center;
+    font-size: 14px;
+}
+
+.grid tbody tr{
+    border-bottom: 1px solid rgba(232,232,232,1);
+}
+
+.green_point{
+    color: #52C41A;
+}
+
+.blue_point{
+    color: #1890FF;
+}
+
+.red_point{
+    color: #F5222D;
+}
+
+.yellow_point{
+    color: #FFA507;
+}
+
+
+.nav_bar{
+    display: flex;
+    margin-top: 20px;
+}
+
+.nav_bar button{
+    flex: 1;
+    width: 100px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 14px;
+    border-radius: 4px;
+}
+
+.nav_bar span{
+    display: inline-block;
+    width: 150px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 14px;
+    text-align: center;
+}
+
+.mask{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: #000;
+    opacity: 0.7;
+    z-index: 2;
+    display: none;
+}
+
+.delete_model{
+    width: 450px;
+    height: 270px;
+    background-color: #ffffff;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    margin-left: -225px;
+    z-index: 3;
+    padding: 50px 45px;
+    font-size: 14px;
+    display: none;
+}
+
+.delete_model label{
+    height: 40px;
+    line-height: 40px;
+
+}
+
+.delete_model .d-v-code{
+    width: 150px;
+    height: 40px;
+    line-height: 40px;
+    border-radius: 4px;
+    outline: none;
+    display: inline-block!important;
+}
+
+.delete_model .v-code-btn{
+    border-radius: 4px;
+    width: 100px;
+    height: 40px;
+    line-height: 40px;
+    display: inline-block;!important;
 }
