--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -5,18 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>账户总览</title>
     <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/bootstrap-table/1.15.4/bootstrap-table.min.css" rel="stylesheet">
     <!-- HTML5 Shiv 和 Respond.js 用于让 IE8 支持 HTML5元素和媒体查询 -->
     <!-- 注意： 如果通过 file://  引入 Respond.js 文件，则该文件无法起效果 -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    <link rel="stylesheet" href="/css/common.css">
 </head>
 <body>
-<h1>账户总览</h1>
+<!--主体-->
+<div class="main">
+    <header class="header">BICOIN</header>
+    <!--侧边栏-->
+    <div class="mainContent">
+        <!--导航列表-->
+        <ul class="navList">
+            <li>
+                <a href="/recharge">充值提现</a>
+            </li>
+            <li>
+                <a href="/order">资金账单</a>
+            </li>
+            <li>
+                <a href="/user">管理用户</a>
+            </li>
+            <li class="active">
+                <a href="/account">账户总览</a>
+            </li>
+            <li>
+                <a href="/index">币coin操作</a>
+            </li>
+        </ul>
+        <!--主要内容-->
+        <div class="content account-block">
+            <div class="account-content">
+                <h4>用户总资产</h4>
+                <p>
+                    <span id="all-account">345436546</span><span>USDT</span>
+                </p>
+            </div>
+            <div class="account-content">
+                <h4>币coin出资</h4>
+                <p>
+                    <span id="bicoin-account">334236</span><span>USDT</span>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="https://cdn.bootcss.com/bootstrap-table/1.15.4/bootstrap-table.min.js"></script>
 </html>
