--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,126 +11,7 @@
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-    <!--<link rel="stylesheet" href="/css/common.css">-->
-    <style>
-        *{
-            list-style: none;
-        }
-
-        body,html{
-            width: 100%;
-            height: 100%;
-            background-color: #F0F3F7;
-        }
-
-        .main{
-            height: 100%;
-            box-sizing: border-box;
-        }
-
-        .header{
-            width: 100%;
-            height: 50px;
-            color: black;
-            font-size: 25px;
-            line-height: 50px;
-            text-align: center;
-            border-bottom: 1px solid #999999;
-            background-color: #fff;
-            position: absolute;
-            left: 0;
-            top: 0;
-        }
-
-        .mainContent{
-            padding-top: 50px;
-            height: 100%;
-            display: flex;
-        }
-
-        .mainContent .navList{
-            height: 100%;
-            flex: 1;
-            background-color: #000C17;
-            text-align: center;
-            margin: 0!important;
-            padding: 0;
-        }
-
-        .mainContent .navList li{
-            height: 40px;
-            line-height: 40px;
-            font-size: 14px;
-        }
-
-        .mainContent .navList li:hover{
-            background-color: #1890FF;
-            cursor: pointer;
-        }
-
-        .mainContent .navList li a{
-            color: #ffffff;
-            text-decoration: none;
-        }
-
-        .mainContent .content{
-            flex: 5;
-            height: 100%;
-            margin: 0;
-            padding: 15px 30px;
-            display: flex;
-        }
-
-        .mainContent .content .input-form{
-            flex: 1;
-            background-color: white;
-            border-radius: 2px;
-            padding: 30px;
-            margin: 0 30px;
-            height: 220px;
-        }
-
-        .btn-primary{
-            background-color: #1890FF!important;
-        }
-
-        .input-form .form-group{
-            display: flex;
-        }
-
-        .input-form .form-group label{
-            flex: 1;
-            line-height: 30px;
-            font-size: 14px;
-        }
-
-        .input-form .form-group input{
-            flex: 3;
-            font-size: 14px;
-            line-height: 30px;
-            height: 30px;
-        }
-
-        .input-form .form-group button{
-            flex: 1;
-        }
-
-        .input-form .form-group .unit-btn{
-            background-color: white;
-            border: none;
-            outline: none;
-            height: 30px;
-            line-height: 30px;
-            font-size: 14px;
-        }
-
-        .vCode-btn{
-            border: 1px solid #D9D9D9;
-            border-radius: 2px;
-            color: rgba(0,0,0,0.65);
-            margin-left: 20px;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/common.css">
 </head>
 <body>
 <!--主体-->
@@ -141,24 +22,24 @@
         <!--导航列表-->
         <ul class="navList">
             <li>
-                <a href="#">充值提现</a>
+                <a href="/recharge">充值提现</a>
             </li>
             <li>
-                <a href="#">资金账单</a>
+                <a href="/order">资金账单</a>
             </li>
             <li>
-                <a href="#">管理用户</a>
+                <a href="/user">管理用户</a>
             </li>
             <li>
-                <a href="#">账户总览</a>
+                <a href="/account">账户总览</a>
             </li>
-            <li>
-                <a href="#">币coin操作</a>
+            <li class="active">
+                <a href="/index">币coin操作</a>
             </li>
         </ul>
         <!--主要内容-->
         <div class="content">
-            <div class="input-form">
+            <div class="input-form index-content-form">
                 <div class="form-group">
                     <label for="rechargeNum">充值金额:</label>
                     <input type="number" class="form-control" id="rechargeNum" placeholder="请输入充值数量">
@@ -173,7 +54,7 @@
                     <button type="submit" class="btn btn-primary" id="rechargeBtn">确认充值</button>
                 </div>
             </div>
-            <div class="input-form">
+            <div class="input-form index-content-form">
                 <div class="form-group">
                     <label for="cashNum">提现金额:</label>
                     <input type="number" class="form-control" id="cashNum" placeholder="请输入提现数量">
@@ -195,9 +76,31 @@
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script>
+    //验证码倒计时函数
+    var wait=60;
+    function changeTime(time_btn) {
+        if (wait == 0) {
+            time_btn.css("color","#1890FF");
+            time_btn.prop("disabled",false);
+            time_btn.text("获取验证码");
+            wait = 60;
+        } else {
+            time_btn.css("color","#cccccc");
+            time_btn.prop("disabled", true);
+            time_btn.text(wait + "(s)");
+            wait--;
+            setTimeout(function() {
+                changeTime(time_btn)
+            }, 1000)
+        }
+    }
+
     $(document).ready(function () {
         $(".vCode-btn").on("click",function () {
+            console.log("点击验证码按钮");
             var type=$(this).val();
+            var time_btn=$(this);
+            console.log(type)
             $.ajax({
                 type:"post",
                 url:"/notice/sendCode",
@@ -207,7 +110,11 @@
                 contentType:'application/json',
                 success:function (res) {
                     if(res.code==0){
-                        console.log("成功")
+                        console.log("验证码发送成功");
+                        changeTime(time_btn);
+                    }else {
+                        console.log("验证码发送失败");
+                        alert("验证码发送失败，验证码一个手机号1小时内只能接收10次短信")
                     }
                 }
             })
