--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -28,7 +28,7 @@
         </div>
         <div class="form-group text-center">
             <div class="col-sm-12">
-                <button type="submit" class="btn btn-primary">登录</button>
+                <button type="submit" class="btn blue-btn">登录</button>
             </div>
         </div>
     </form>
