--- a/src/main/resources/templates/recharge.html
+++ b/src/main/resources/templates/recharge.html
@@ -5,18 +5,90 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>充值提现</title>
     <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/bootstrap-table/1.15.4/bootstrap-table.min.css" rel="stylesheet">
     <!-- HTML5 Shiv 和 Respond.js 用于让 IE8 支持 HTML5元素和媒体查询 -->
     <!-- 注意： 如果通过 file://  引入 Respond.js 文件，则该文件无法起效果 -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    <link rel="stylesheet" href="/css/common.css">
 </head>
 <body>
-<h1>充值提现</h1>
+<!--主体-->
+<div class="main">
+    <header class="header">BICOIN</header>
+    <!--侧边栏-->
+    <div class="mainContent">
+        <!--导航列表-->
+        <ul class="navList">
+            <li class="active">
+                <a href="/recharge">充值提现</a>
+            </li>
+            <li>
+                <a href="/order">资金账单</a>
+            </li>
+            <li>
+                <a href="/user">管理用户</a>
+            </li>
+            <li>
+                <a href="/account">账户总览</a>
+            </li>
+            <li>
+                <a href="/index">币coin操作</a>
+            </li>
+        </ul>
+        <!--主要内容-->
+        <div class="content">
+            <div class="input-form recharge-content-form">
+                <div class="form-group">
+                    <label for="rechargeUser">充值用户:</label>
+                    <select name="rechargeUser" id="rechargeUser">
+                        <option value="1111">Jerry</option>
+                        <option value="1234">haohao</option>
+                        <option value="1314">Moumo</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="rechargeNum">充值金额:</label>
+                    <input type="number" class="form-control" id="rechargeNum" placeholder="请输入充值数量">
+                    <button type="button" class="unit-btn">USDT</button>
+                </div>
+                <div class="form-group">
+                    <label for="vRechargeCode">验证码:</label>
+                    <input type="text" class="form-control" id="vRechargeCode" placeholder="请输入验证码">
+                    <button type="button" class="unit-btn vCode-btn" value="1">获取验证码</button>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary" id="rechargeBtn">确认充值</button>
+                </div>
+            </div>
+            <div class="input-form recharge-content-form">
+                <div class="form-group">
+                    <label for="cashUser">提现用户:</label>
+                    <select name="cashUser" id="cashUser">
+                        <option value="1111">Jerry</option>
+                        <option value="1234">haohao</option>
+                        <option value="1314">Moumo</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="cashNum">提现金额:</label>
+                    <input type="number" class="form-control" id="cashNum" placeholder="请输入提现数量">
+                    <button type="button" class="unit-btn">USDT</button>
+                </div>
+                <div class="form-group">
+                    <label for="vCashCode">验证码:</label>
+                    <input type="text" class="form-control" id="vCashCode" placeholder="请输入验证码">
+                    <button type="button" class="unit-btn vCode-btn" value="2">获取验证码</button>
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-danger" id="cashBtn">确认提现</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="https://cdn.bootcss.com/bootstrap-table/1.15.4/bootstrap-table.min.js"></script>
 </html>
