--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -5,18 +5,180 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>管理用户</title>
     <link href="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.bootcss.com/bootstrap-table/1.15.4/bootstrap-table.min.css" rel="stylesheet">
     <!-- HTML5 Shiv 和 Respond.js 用于让 IE8 支持 HTML5元素和媒体查询 -->
     <!-- 注意： 如果通过 file://  引入 Respond.js 文件，则该文件无法起效果 -->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
+    <link rel="stylesheet" href="/css/common.css">
 </head>
 <body>
-<h1>管理用户</h1>
+<!--主体-->
+<div class="main">
+    <header class="header">BICOIN</header>
+    <!--侧边栏-->
+    <div class="mainContent">
+        <!--导航列表-->
+        <ul class="navList">
+            <li>
+                <a href="/recharge">充值提现</a>
+            </li>
+            <li>
+                <a href="/order">资金账单</a>
+            </li>
+            <li class="active">
+                <a href="/user">管理用户</a>
+            </li>
+            <li>
+                <a href="/account">账户总览</a>
+            </li>
+            <li>
+                <a href="/index">币coin操作</a>
+            </li>
+        </ul>
+        <!--主要内容-->
+        <div class="content column-content">
+            <table class="grid">
+                <thead>
+                <tr>
+                    <th>火币UID</th>
+                    <th>昵称</th>
+                    <th>金额</th>
+                    <th>操作</th>
+                </tr>
+                </thead>
+                <tbody id="list"></tbody>
+            </table>
+            <div class="nav_bar btn-group">
+                <button id="first_btn">首页</button>
+                <button id="prev_btn">上一页</button>
+                <span id="pageInfo">1/20</span>
+                <button id="next_btn">下一页</button>
+                <button id="last_btn">尾页</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--遮罩层-->
+<div class="mask"></div>
+<div class="delete_model">
+    <p>您将要删除 <span class="user_info">囤明星（UID:12345）</span>,请验证您的身份</p>
+    <p>
+        <label for="d-v-code">验证码：</label>
+        <input type="text" class="d-v-code form-control" id="d-v-code" placeholder="验证码">
+        <button type="button" class="v-code-btn" onclick="deleteUserByUid(1,123)">获取验证码</button>
+    </p>
+    <p>
+        <button type="button" class="btn blue-btn">确认删除</button>
+    </p>
+</div>
 </body>
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="https://cdn.bootcss.com/bootstrap-table/1.15.4/bootstrap-table.min.js"></script>
+<script>
+    var data={
+        "code": 0,
+        "message": "成功",
+        "data": {
+            "nowPage": 1,
+            "maxPage": 93,
+            "data": [
+                {
+                    "uid": 1111,
+                    "nickName": "张三",
+                    "account": 92343
+                },
+                {
+                    "uid": 2222,
+                    "nickName": "李四",
+                    "account": 92344
+                },
+                {
+                    "uid": 3333,
+                    "nickName": "王五",
+                    "account": 92345
+                },
+                {
+                    "uid": 4444,
+                    "nickName": "赵六",
+                    "account": 92346
+                },
+                {
+                    "uid": 5555,
+                    "nickName": "田七",
+                    "account": 92347
+                }
+            ]
+        }
+    }
+
+    function showOrderList(data) {
+        $("#list").empty();
+        $.each(data,function (index,item) {
+            var tr=$("<tr></tr>");
+            var uid=$("<td>"+item.uid+"</td>");
+            var nickName=$("<td>"+item.nickName+"</td>");
+            var bicoinAccount=$("<td>"+item.account+" USDT</td>");
+            var deleteBtn=$("<button class='btn btn-danger' onclick='deleteUserByUid("+item.uid+")'>删除</button>")
+            tr.append(uid).append(nickName).append(bicoinAccount).append(deleteBtn);
+            $("#list").append(tr);
+        })
+    }
+    showOrderList(data.data.data);
+
+    function showOrderPageList(data) {
+        $("#pageInfo").html(data.data.nowPage+"/"+data.data.maxPage);
+        $("#first_btn").bind("click",function () {
+            console.log("第一页")
+        });
+        $("#last_btn").bind("click",function () {
+            console.log("最后一页")
+        });
+        $("#prev_btn").bind("click",function () {
+            console.log("上一页")
+        });
+        $("#next_btn").bind("click",function () {
+            console.log("下一页")
+        })
+    }
+
+    function getOrderListByPageNo(pageNo) {
+        $.ajax({
+            type:"get",
+            url:"/",
+            success:function (res) {
+                if (res.code==0){
+                    showOrderList(res.data.data);
+                    showOrderPageList(res.data)
+                }
+            }
+        })
+    }
+
+
+
+    function deleteUserByUid(uid,vcode) {
+        $.ajax({
+            type:"post",
+            url:'/',
+            data:JSON.stringify({
+                uid:uid,
+                vcode:vcode
+            }),
+            contentType:'application/json',
+            success:function (res) {
+                if(res.code==0){
+                    alert("删除成功");
+                    getOrderListByPageNo(1)
+                }
+            }
+
+        })
+    }
+
+    function showDeleteDialog(uid,nickName) {
+        $(".delete_model .user_info").html(nickName+" (UID:"+uid+")");
+    }
+</script>
 </html>
