--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -77,7 +77,7 @@
         $("#list").empty();
         $.each(data,function (index,item) {
             var tr=$("<tr></tr>");
-            var time=$("<td>"+item.cTime+"</td>");
+            var time=$("<td>"+item.ctime+"</td>");
             var uid=$("<td>"+item.huobiUid+"</td>");
             var nickName=$("<td>"+item.nickName+"</td>");
             var type;
