修改登录用户名密码

--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -101,7 +101,7 @@
             <div class="nav_bar btn-group">
                 <button id="first_btn">首页</button>
                 <button id="prev_btn">上一页</button>
-                <span id="pageInfo">1/20</span>
+                <span id="pageInfo"></span>
                 <button id="next_btn">下一页</button>
                 <button id="last_btn">尾页</button>
             </div>
