--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -104,7 +104,7 @@
                 type:"post",
                 url:"/notice/sendCode",
                 data:JSON.stringify({
-                    type:type
+                    type:2
                 }),
                 contentType:'application/json',
                 success:function (res) {
