--- a/src/main/resources/templates/recharge.html
+++ b/src/main/resources/templates/recharge.html
@@ -146,7 +146,7 @@
             type:"post",
             url:'/notice/sendCode',
             data:JSON.stringify({
-                type:type.val()
+                type:1
             }),
             contentType:'application/json',
             success:function (res) {
